Archive/9de542f3b66faed144ab3341c137c099-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'void qsort(range&)':
main.cpp:86:19: error: 'struct range' has no member named 'insert'
                 v.insert(v.begin() + p + 1, v[i]);
                   ^
main.cpp:86:34: error: expression cannot be used as a function
                 v.insert(v.begin() + p + 1, v[i]);
                                  ^
main.cpp:87:19: error: 'struct range' has no member named 'erase'
                 v.erase(v.begin() + 1);
                   ^
main.cpp:87:33: error: expression cannot be used as a function
                 v.erase(v.begin() + 1);
                                 ^
main.cpp:94:15: error: 'struct range' has no member named 'erase'
             v.erase(v.begin() + j);
               ^
main.cpp:94:29: error: expression cannot be used as a function
             v.erase(v.begin() + j);
                             ^
main.cpp:95:15: error: 'struct range' has no member named 'insert'
             v.insert(v.begin(), copy);
               ^
main.cpp:95:30: error: expression cannot be used as a function
             v.insert(v.begin(), copy);
                              ^
main.cpp:101:19: error: 'left_side' was not declared in this scope
             qsort(left_side);
                   ^
main.cpp:102:19: error: 'right_side' was not declared in this scope
             qsort(right_side);
                   ^
